fix: Use flex for nav on mobile.

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -389,11 +389,7 @@ footer .container {
 @media screen and (max-width: 40rem) {
 	/* phone */
 	header nav {
-		display: grid;
-		grid-auto-flow: column;
-		grid-auto-columns: 1fr;
-
-		overflow-x: scroll;
+		overflow-x: auto;
 		scroll-snap-type: x mandatory;
 		scroll-padding: var(--header-gap);
 	}
